# CZip

./: .gitignore  CMakeLists.txt
.github/: .clang-format  .clang-tidy
.github/workflows/: ci.yml  release.yml
_codeql_build_dir/: directory_test
lib/: compatibility.h  compress.c  compress.h  data_types.h  debugmalloc.h  decompress.c  decompress.h  directory.c  directory.h  file.c  file.h
src/: main.c
tests/: .serialized.tmp  test_cli.c  test_compress.c  test_compress_decompress.c  test_directory.c  test_file_io.c
